Responsive📏, routed on Delete!🍎

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+
+}
+
+html, body{
+
+    width:100%
+
+}
